Fixed alignment

--- a/app/src/Components/LandlordProfile.css
+++ b/app/src/Components/LandlordProfile.css
@@ -6,7 +6,6 @@
   align-self: center;
   margin: 20px;
   margin-top: 122px;
-  margin-left: -100px;
   max-width: 100%;
   padding: 50px 20px;
   border-bottom: 2px solid var(--Gray-4, #bdbdbd);
@@ -22,18 +21,21 @@
 
 .profile-image {
   margin-bottom: 20px;
-  margin-left: 1000px;
+  align-items: center;
+  margin-left: 600px;
 }
 
 .profile-img {
   width: 300px;
   height: 300px;
   border-radius: 50%;
+  align-items: center;
 }
 
 @media (max-width: 991px) {
   .profile-img {
     margin-top: 20px;
+    align-items: center;
   }
 }
 
@@ -147,7 +149,7 @@
   align-items: center;
   justify-content: space-between;
   gap: 20px;
-  margin-left: 1200px;
+  margin-left: 1000px;
 }
 
 @media (max-width: 991px) {
@@ -158,7 +160,7 @@
 
 .text-wrapper {
   color: var(--Gray-3, #828282);
-  margin-left: 500px;
+  margin-left: 300px;
   margin-top: 70px;
   margin-bottom: -10px;
   font: 700 35px/41px Roboto, -apple-system, Roboto, Helvetica, sans-serif;
@@ -210,5 +212,4 @@
 
 .current-properties {
   align-items: center;
-  margin-left: 300px;
 }
